# mirror

./: .gitignore  CMakeLists.txt  start_program  start_program.c  start_program.h
Manipulation/: Interface.c  Output.c  Preparing.c  Reading.c  Time.c  Writing.c
Manipulation/Core/: Output.c  Preparing.c  Reading.c  Time.c  Writing.c
Manipulation/Data/: Data.c  Data.h
Manipulation/Data/headers/: Data.h
Manipulation/Global/: Global_structs.h  Global_variables.c  Global_variables.h
Manipulation/Global/headers/: Global_structs.h  Global_variables.h
Manipulation/Interface/: Interface.c
Manipulation/Interface/Menu_2/: Menu_2.c  Menu_2.h
Manipulation/Interface/Menu_3/: Menu_3.c  Menu_3.h
Manipulation/Interface/Menu_4/: Menu_4.c  Menu_4.h
tmp/: Makefile  cmake_install.cmake
